# goit-pythonweb-hw-10

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/versions/: 10e68abf7583_init.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/schemas/: contacts.py
src/services/: auth.py  contacts.py  users.py
src/services/templates/: verify_email.html
